--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -168,32 +168,23 @@
     <integer name="config_virtualKeyQuietTimeMillis">200</integer>
 
     <bool name="cm_default_is_tablet">true</bool>
-
     <bool name="cm_default_has_soft_buttons">true</bool>
-
     <bool name="cm_default_bottom_status_bar">false</bool>
-
     <bool name="cm_default_use_dead_zone">false</bool>
-
     <bool name="cm_default_soft_buttons_left">false</bool>
-
     <bool name="cm_default_show_soft_home">false</bool>
     <bool name="cm_default_show_soft_menu">false</bool>
     <bool name="cm_default_show_soft_back">false</bool>
     <bool name="cm_default_show_soft_search">false</bool>
     <bool name="cm_default_show_soft_quick_na">false</bool>
-
     <bool name="cm_default_disable_lockscreen">false</bool>
-
     <bool name="cm_default_disable_fullscreen">false</bool>
-
-    <integer name="cm_default_unhide_button_index">0</integer>
-
     <bool name="cm_default_extend_power_menu">true</bool>
-
     <bool name="cm_default_power_menu_home">true</bool>
     <bool name="cm_default_power_menu_menu">true</bool>
     <bool name="cm_default_power_menu_back">true</bool>
-
     <bool name="cm_default_reverse_volume_behavior">false</bool>
+    <integer name="cm_default_unhide_button_index">0</integer>
+
+    <bool name="config_fmSeparateVolumeControl">true</bool>
 </resources>
